<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CartActivity">

    <ImageView
        android:id="@+id/cart_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrowback"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        android:text="@string/txt_cart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/cart_back"
        app:layout_constraintStart_toEndOf="@+id/cart_back"
        app:layout_constraintTop_toTopOf="@+id/cart_back"
        tools:ignore="MissingConstraints,UnusedAttribute" />

    <CheckBox
        android:id="@+id/select_all"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_select_all"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cart_back" />

    <TextView
        android:id="@+id/action_delete_cart"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/txt_delete"
        android:textColor="@color/BottomColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/select_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/select_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cart_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_all" />

    <TextView
        android:id="@+id/txt_total_harga"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/txt_total_harga"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/txt_rp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_rp"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/txt_rp"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cart_total_harga"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@id/txt_rp"
        app:layout_constraintStart_toEndOf="@id/txt_rp"
        app:layout_constraintTop_toTopOf="@id/txt_rp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/txt_0"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/BottomColor"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="Beli (4)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_total_harga"
        app:layout_constraintBottom_toBottomOf="@id/txt_rp"/>
</androidx.constraintlayout.widget.ConstraintLayout>