<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fragment_comment"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/txt_comment"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_comment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_comment" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_comment"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/add_comment"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/img_comment"
        app:layout_constraintTop_toTopOf="@id/img_comment" />

    <ImageView
        android:id="@+id/img_comment1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo1"
        app:layout_constraintStart_toStartOf="@id/img_comment"
        app:layout_constraintTop_toBottomOf="@id/img_comment" />

    <TextView
        android:id="@+id/name_comment"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/txt_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_comment1"
        app:layout_constraintTop_toTopOf="@id/img_comment1" />

    <TextView
        android:id="@+id/txt_comment_user1"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/txt_comment_usr"
        android:textColor="#25282B"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/name_comment"
        app:layout_constraintTop_toBottomOf="@id/name_comment" />

    <ImageView
        android:id="@+id/img_comment2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo1"
        app:layout_constraintStart_toStartOf="@id/img_comment1"
        app:layout_constraintTop_toBottomOf="@id/img_comment1" />

    <TextView
        android:id="@+id/name_comment2"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/txt_name_user2"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_comment2"
        app:layout_constraintTop_toTopOf="@id/img_comment2" />

    <TextView
        android:id="@+id/txt_comment_user2"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/txt_comment_user"
        android:textColor="#25282B"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/name_comment2"
        app:layout_constraintTop_toBottomOf="@id/name_comment2" />

</androidx.constraintlayout.widget.ConstraintLayout>