<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="174dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:elevation="1dp"
    android:layout_marginBottom="16dp"
    android:translationZ="1dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/produc2" />

        <TextView
            android:id="@+id/txt_name_product"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/txt_name_produc"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/txt_rp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_price_product"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:text="@string/txt_price_product"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>