<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/rounded"
    android:elevation="1dp"
    android:padding="16dp"
    android:translationZ="1dp">

    <TextView
        android:id="@+id/label_address"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/txt_tokoh"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipient_name"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/txt_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_address" />

    <ImageButton
        android:id="@+id/btn_action_more_address"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/recipient_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_address"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/txt_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:lineSpacingExtra="2dp"
        android:text="@string/txt_ex_address"
        android:textColor="@color/txtColorSecondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/recipient_name" />
</androidx.constraintlayout.widget.ConstraintLayout>